--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  flutter_map: ^8.1.1
+  flutter_en_json_extractor: ^0.0.4
+  flutter_map: 5.0.0
   flutter_open_street_map: ^0.0.4
   geocoding: ^3.0.0
   geoflutterfire2: ^2.3.15
